# cpp_qt

qt2/: CMakeLists.txt  main.cpp
qt3/: CMakeLists.txt  DbConnectionDialog.cpp  DbConnectionDialog.h  DbConnectionDialog.ui  main.cpp
qt4/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt5/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt6/08_PreDataBase/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
